--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: JohnnyMorganz/stylua-action@v1
         with:
           token: ${{ secrets.STYLUA_GITHUB_TOKEN }}
-          version: 1.1.2  # NOTE: we recommend pinning to a specific version in case of formatting changes
+          version: V1.1.2  # NOTE: we recommend pinning to a specific version in case of formatting changes
   release:
     runs-on: ubuntu-latest
     env:
