--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: JohnnyMorganz/stylua-action@v1.1.2
         with:
           token: ${{ secrets.STYLUA_GITHUB_TOKEN }}
-        args: --glob '**/*.lua' .
+          version: 1.1.2
+          args: --glob '**/*.lua' .
   release:
     runs-on: ubuntu-latest
     env:
