--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: JohnnyMorganz/stylua-action@v1.1.2
         with:
-          token: ${{ secrets.STYLUA_GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           args: .
   release:
     runs-on: ubuntu-latest
